# Kinetra

./: .descriptions.xml  .env.example  .envrc  .gitconfig-kinetra  .gitignore  .pythonstartup  ACTION_ITEMS.md  AGENT_RULES_MASTER.md  AI_AGENT_INSTRUCTIONS.md  AUDIT_SUMMARY_2026-01-01.md  Annotator.xml  BRANCH_CLEANUP_PLAN.md  BTCUSD_H1_202301020000_202512270600.csv  CI_MONITORING.md  CI_TEST_RESULTS.md  COMMIT_READY.md  COMPREHENSIVE_MENU_IMPROVEMENTS.md  CONTINUOUS_TESTING_COMPLETE.md  CONTINUOUS_TESTING_LOG.md  DATA_DISCOVERY_INTEGRATION.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY_2026-01-03.md  Dockerfile  Dockerfile.rocm  DuplicatedCode.xml  DuplicatedCode_aggregate.xml  EXHAUSTIVE_TESTING_ACTION_PLAN.md  EXHAUSTIVE_TESTING_IMPLEMENTATION_SUMMARY.md  EXHAUSTIVE_TESTING_PATCH_SUMMARY.md  EXHAUSTIVE_TESTING_QUICKREF.md  EXHAUSTIVE_TESTING_QUICKSTART.md  EXHAUSTIVE_TESTING_VALIDATION.md  ExceptionCaughtLocallyJS.xml  FEATURE_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS.md  GrazieStyle.xml  IMMEDIATE_ACTIONS_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  (+74 more)
.claude/: instructions.md  type_checking_guidelines.md
.github/: BRANCHING_STRATEGY.md  SETUP_GIT.sh  copilot-instructions.md
.github/hooks/: pre-commit
.github/workflows/: ci.yml
archive/inspection-reports/: GrazieInspection.xml  HtmlRequiredLangAttribute.xml  HttpUrlsUsage.xml  JSUnresolvedReference.xml  MarkdownIncorrectTableFormatting.xml  MarkdownIncorrectlyNumberedListItem.xml  MarkdownUnresolvedFileReference.xml  OutdatedRequirementInspection.xml  PyAssignmentToLoopOrWithParameterInspection.xml  PyAttributeOutsideInitInspection.xml  PyCallingNonCallableInspection.xml  PyDefaultArgumentInspection.xml  PyDeprecationInspection.xml  PyDictCreationInspection.xml  PyDictDuplicateKeysInspection.xml  PyPep8NamingInspection.xml  PyRedundantParenthesesInspection.xml  PyShadowingNamesInspection.xml  PySimplifyBooleanCheckInspection.xml  PyStubPackagesAdvertiser.xml  PyTupleAssignmentBalanceInspection.xml  PyTypeCheckerInspection.xml  PyUnboundLocalVariableInspection.xml
archive/legacy-scripts/: apply_all_fixes.sh  env_setup.sh  run_backtest.sh
archive/status-reports/: AI_AGENT_INSTRUCTIONS.md  AUDIT_REPORT.txt  BRANCH_MANAGEMENT_SUMMARY.md  COMPLETION_SUMMARY_OLD.md  CONSOLIDATION_COMPLETE.md  DEPENDENCY_LOCK_SUMMARY.md  EXECUTIVE_SUMMARY.md  (+13 more)
backtest_results/: all_run_metrics.csv
configs/: example_test_config.yaml
data/: .gitkeep  README.md
docs/: ACTION_PLAN.md  ARCHITECTURE_COMPLETE.md  ARCHITECTURE_QUICK_REF.md  BACKTESTER_COMPARISON.md  BACKTEST_CONSOLIDATION_ANALYSIS.md  BACKTEST_ENGINE_IMPROVEMENTS.md  BRANCHING_QUICK_REF.md  BRANCHING_STRATEGY.md  CANONICAL_RULES_SYSTEM.md  COMPLETE_SCRIPT_INVENTORY.txt  DEVOPS.md  EMPIRICAL_THEOREMS.md  EXHAUSTIVE_TESTING_GUIDE.md  HOUSEKEEPING_AUDIT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  LIVE_TESTING_GUIDE.md  MENU_AUDIT_REPORT.md  MENU_SYSTEM_FLOWCHART.md  MENU_SYSTEM_USER_GUIDE.md  METAAPI_CREDENTIALS_SETUP.md  METAAPI_MQL5_INTEGRATION.md  METAAPI_QUICKSTART.md  METAAPI_SETUP.md  MT5_API_MAPPING.md  QUICK_REFERENCE_CLI_E2E.md  RULES_CONSOLIDATION_ANNOUNCEMENT.md  SCIENTIFIC_TESTING_GUIDE.md  SCIENTIFIC_TESTING_QUICK_REF.md  SCRIPT_CLASSIFICATION_ANALYSIS.md  SILENT_FAILURE_WORKFLOW.md  STATISTICAL_FUNCTIONS.md  SUPERPOT_EMPIRICAL_TESTING.md  SUPERPOT_IMPLEMENTATION_SUMMARY.md  SUPERPOT_QUICK_REF.md  SWAP_CALCULATION.md  TESTING_FRAMEWORK.md  UNIFIED_SYSTEM_GUIDE.md  UNIFIED_TEST_FRAMEWORK_IMPLEMENTATION.md  USABLE_DATA_PERMUTATIONS.md  (+5 more)
examples/: use_metaapi_data.py
kinetra/: _AUDIT_CATEGORIZATION.txt  __init__.py  agent_factory.py  assumption_free_measures.py  backtest_engine.py  backtest_optimizer.py  berserker_strategy.py  broker_compliance.py  composite_stacking.py  config.py  context_aware_menu.py  data_alignment.py  data_discovery.py  data_loader.py  data_management.py  data_manager.py  data_package.py  data_quality.py  data_utils.py  discovery_methods.py  doppelganger_triad.py  dsp_features.py  experience_replay.py  exploration_integration.py  financial_audit.py  gpu_testing.py  grafana_exporter.py  hardware_optimizer.py  health_monitor.py  health_score.py  high_performance_engine.py  hpo_optimizer.py  integrated_backtester.py  liquidity_features.py  live_dashboard.py  market_calendar.py  market_events.py  market_microstructure.py  measurements.py  menu_ux.py  (+59 more)
monitoring/: dashboard.html  docker-compose.yml  prometheus.yml
mt5/: ExportMarketData.mq5
scripts/: README_SPECIALIZATION_EXPLORER.md  README_TESTING.md  _organize_scripts.sh  analyze_berserker_context.py  analyze_direction.py  analyze_directional_tension.py  analyze_energy.py  analyze_energy_both.py  analyze_energy_capture.py  analyze_extended_physics.py  analyze_fat_candles.py  analyze_reversal.py  analyze_reynolds_continuation.py  analyze_triggers.py  analyze_volatility_estimators.py  audit_data_coverage.py  audit_menu_system.py  backup_data.py  batch_backtest.py  benchmark_performance.py  branch_manager.py  cache_manager.py  check_and_fill_data.py  classify_unused_scripts.py  consolidate_data.py  convert_mt5_format.py  dashboard.py  debug_csv.py  demo_backtest_improvements.py  demo_modular_execution.py  detect_silent_failures.py  devops_manager.py  download_interactive.py  download_market_data.py  download_metaapi.py  explore_compare_agents.py  explore_interactive.py  explore_universal.py  explorer_standalone.py  extract_mt5_specs.py  (+77 more)
tests/: btc_h1_physics.py  btc_h1_physics_fixed.py  btc_h1_physics_working.py  conftest.py  run_all_tests.py  run_ci_tests.py  test_assumption_free.py  test_backtest_engine_comprehensive.py  test_btc_h1_physics_working.py  test_e2e_orchestrator.py  test_exhaustive_combinations.py  test_integration.py  test_live_testing_integration.py  test_menu_comprehensive.py  test_menu_system.py  test_menu_workflow.py  test_performance_profiling.py  test_physics.py  test_physics_backtester.py  test_physics_pipeline.py  test_risk.py  test_scientific_framework.py  test_system_stress.py  test_workflow_manager.py
(+254 files in other folders)
