[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinetra"
version = "1.0.0"
description = "Physics-First Adaptive Trading System"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Kinetra Team"}
]
dependencies = [
    # Core scientific computing - LOCKED versions for financial stability
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.14.1",

    # Data validation
    "pydantic==2.10.6",

    # Machine Learning - LOCKED
    "scikit-learn==1.5.2",
    "hmmlearn==0.3.2",

    # RL Framework - LOCKED
    "gymnasium==1.0.0",
    "stable-baselines3==2.7.1",

    # PyTorch with CUDA/ROCm support - LOCKED
    "torch==2.8.0",
    "torchvision==0.20.1",

    # JIT compilation for performance - LOCKED
    "numba==0.60.0",
    "llvmlite==0.43.0",

    # MetaAPI - PRIMARY connection to MT5
    "metaapi-cloud-sdk==31.1.0",
    "inquirer==3.4.0",

    # System utilities
    "psutil==7.2.1",
    "tqdm==4.67.1",
    "coverage==7.13.1",

    # Async support
    "aiohttp==3.12.14",

    # Security - LOCKED to fix vulnerabilities
    "cryptography==46.0.3",
    "requests==2.32.5",
    "certifi==2025.11.12",
    "urllib3==2.6.2",

    # Plotting and visualization
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==6.0.0",
    "hypothesis==6.122.4",
    "black==25.12.0",
    "ruff==0.9.1",
    "mypy==1.14.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kinetra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude demo/standalone scripts that are not actual tests
norecursedirs = [".git", ".tox", "dist", "build", "*.egg"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
