[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kinetra"
version = "1.0.0"
description = "Physics-First Adaptive Trading System"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Kinetra Team"}
]
dependencies = [
    # Core scientific computing - Compatible with Python 3.10+
    "numpy>=2.2.0,<3.0.0",
    "pandas>=2.2.0,<3.0.0",
    "scipy>=1.13.0,<2.0.0",

    # Data validation
    "pydantic>=2.10.0,<3.0.0",

    # Machine Learning
    "scikit-learn>=1.5.0,<2.0.0",
    "hmmlearn>=0.3.0,<0.4.0",

    # RL Framework
    "gymnasium>=1.2.0,<2.0.0",
    "stable-baselines3>=2.7.0,<3.0.0",

    # PyTorch with CUDA/ROCm support
    "torch>=2.9.0,<3.0.0",
    "torchvision>=0.24.0,<1.0.0",

    # JIT compilation for performance
    "numba>=0.60.0,<1.0.0",
    "llvmlite>=0.43.0,<1.0.0",

    # MetaAPI - PRIMARY connection to MT5
    "metaapi-cloud-sdk>=29.0.0,<30.0.0",
    "inquirer>=3.4.0,<4.0.0",

    # System utilities
    "psutil>=7.2.0,<8.0.0",
    "tqdm>=4.67.0,<5.0.0",
    "coverage>=7.13.0,<8.0.0",

    # Async support
    "aiohttp>=3.13.0,<4.0.0",

    # Security - Fixed versions for vulnerabilities
    "cryptography>=46.0.0,<47.0.0",
    "requests>=2.32.0,<3.0.0",
    "certifi>=2025.11.0",
    "urllib3>=2.6.0,<3.0.0",

    # Plotting and visualization
    "matplotlib>=3.10.0,<4.0.0",
    "seaborn>=0.13.0,<1.0.0",

    # Interactive dashboard and reporting
    "plotly>=5.18.0,<6.0.0",
    "dash>=2.14.0,<3.0.0",
    "dash-bootstrap-components>=1.5.0,<2.0.0",

    # Parallel processing
    "joblib>=1.3.0,<2.0.0",

    # Hyperparameter optimization
    "optuna>=3.5.0,<4.0.0",

    # Reinforcement learning (for A3C, SAC, TD3 agents)
    "stable-baselines3>=2.2.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-xdist>=3.5.0,<4.0.0",  # Parallel test execution
    "hypothesis>=6.122.0,<7.0.0",
    "black>=25.12.0,<26.0.0",
    "ruff>=0.9.0,<1.0.0",
    "mypy>=1.14.0,<2.0.0",
    "ipython>=8.0.0,<9.0.0",
    "ipdb>=0.13.0,<1.0.0",
]

visualization = [
    # Additional visualization tools for advanced reporting
    "kaleido>=0.2.1",  # Static image export for plotly
    "pillow>=10.0.0,<11.0.0",  # Image processing
]

hpo = [
    # Hyperparameter optimization with advanced features
    "optuna>=3.5.0,<4.0.0",
    "optuna-dashboard>=0.15.0,<1.0.0",  # Web-based visualization
]

gpu = [
    # GPU-specific packages (install separately based on hardware)
    # For NVIDIA: torch with CUDA
    # For AMD: torch with ROCm (install from AMD repos)
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kinetra*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude demo/standalone scripts that are not actual tests
norecursedirs = [".git", ".tox", "dist", "build", "*.egg"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
